landing page finished based on screenshots

--- a/index.html
+++ b/index.html
@@ -11,6 +11,71 @@
 
 <body>
 
+    <header class="header">
+        <h2><strong>Header Logo</strong> </h2>
+        <div class="right-links">
+            <p class="link-item">header link one </p>
+            <p class="link-item">header link two </p>
+            <p class="link-item">header link three </p>
+        </div>
+    </header>
+    <div class="hero">
+        <div class="hero-text">
+            <h1 class="hero-text-item">
+                This website is awesome
+            </h1>
+            <p class="hero-text-item">
+                This website has some subtext that goes here under the main title. It's a smaller font and the color
+                is
+                lower contrast.</p>
+            <a href="" class="button hero-text-item"><strong>Sign up</strong></a>
+        </div>
+        <p class="hero-image">
+            This is a placeholder for an image
+        </p>
+    </div>
+
+    <div class="content">
+        <h2>Some random information.</h2>
+        <div class="content-boxes">
+            <div class="content-box">
+                <p class="box"></p>
+                <p>This is some subtext under an illustration or image</p>
+            </div>
+            <div class="content-box">
+                <p class="box"></p>
+                <p>This is some subtext under an illustration or image</p>
+            </div>
+            <div class="content-box">
+                <p class="box"></p>
+                <p>This is some subtext under an illustration or image</p>
+            </div>
+            <div class="content-box">
+                <p class="box"></p>
+                <p>This is some subtext under an illustration or image</p>
+            </div>
+        </div>
+    </div>
+    <div class="quote">
+        <p class="quote-text"> This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up
+            space, or maybe people
+            will actually read it. Who knows? All I know is that it looks nice.</p>
+        <p class="quote-attribution">
+            - Thor, God of Thunder
+        </p>
+    </div>
+    <div class="footer">
+        <footer>
+            <div class="action-bar">
+                <div class="action-text">
+                    <h4>Call to action!</h4>
+                    <p>It's time! Sign up for our product by clicking that button right over there!</p>
+                </div>
+                <a href="" class="button">Sign up</a>
+            </div>
+        </footer>
+    </div>
+
 </body>
 
 </html>
